TEST_PROGRAMS/VALID/05/2d_array_type_dec.go
/* 2D array type declaration. */

package main

type matrix [2][2] float64

func main() {
	// Do nothing.
}
