TEST_PROGRAMS/INVALID/04/35.go
package main

func main() {
    //Illegal array type
    var x [0]struct{
}
